18_reverse_str/grade.txt
Grading at Sun Jul 26 16:23:53 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:30:14: error: implicit declaration of function ‘string_length’ [-Werror=implicit-function-declaration]
     length = string_length(str);
              ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
